--- a/test.html
+++ b/test.html
@@ -263,6 +263,7 @@
   <div class="Test-run" style="font-size: 20px;">
     <button>button</button><br>
     <input value="input"><br>
+    <input placeholder="input placeholder"><br>
     <select style="border:1px solid #999;">
       <optgroup label="optgroup">
         <option>option</option>
